--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -42,31 +42,20 @@ jobs:
         if: steps.cache.outputs.cache-hit != 'true'
         run: npm ci
 
-      # - name: Nx Workspace Lint
-      #   run: npx nx workspace-lint
+      - name: Nx Workspace Lint
+        run: npx nx workspace-lint
 
-      # - name: Nx Format Check
-      #   run: npx nx format:check
+      - name: Nx Format Check
+        run: npx nx format:check
 
-      # - name: Lint
-      #   run: npx nx affected --target=lint --parallel=3
+      - name: Lint
+        run: npx nx affected --target=lint --parallel=3
 
-      # - name: Test
-      #   run: npx nx affected --target=test --parallel=3
+      - name: Test
+        run: npx nx affected --target=test --parallel=3
 
-      # - name: Build
-      #   run: npx nx affected --target=build --parallel=3
-
-      # - name: Configure AWS credentials
-      #   uses: aws-actions/configure-aws-credentials@v1
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: us-east-1
-
-      # - name: Login to Amazon ECR
-      #   id: login-ecr
-      #   uses: aws-actions/amazon-ecr-login@v1
+      - name: Build
+        run: npx nx affected --target=build --parallel=3
 
       - name: Set Affected
         id: set-affected
@@ -81,24 +70,28 @@ jobs:
       matrix:
         project: ${{ fromJson(needs.ci.outputs.affected) }}
     steps:
-      - run: echo "hello from ${{ matrix.project }}"
-      # - uses: actions/checkout@v2
-      # with:
-      # fetch-depth: 0
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - uses: nrwl/nx-set-shas@v3
+        with:
+          main-branch-name: next
 
-      # https://github.com/docker/metadata-action
-      # - name: Docker Metadata
-      #   uses: docker/metadata-action@v4
-      #   id: meta
-      #   with:
-      #     images: |
-      #       enable=false
-      #     tags: |
-      #       type=ref,event=branch
-      #       type=ref,event=pr
-      #       type=ref,event=tag
-      #       type=sha
-      #       randomval4455
+      - name: Cache node modules
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: cache-node-modules-${{ hashFiles('package-lock.json') }}
+
+      - uses: actions/setup-node@v1
+        if: steps.cache.outputs.cache-hit != 'true'
+        with:
+          node-version: 16.x
+
+      - name: Install Dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
 
       # - name: Dockerize
       #   run: npx nx affected --target=docker:build --configuration=ci --parallel=3
