--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -107,7 +107,7 @@ jobs:
             randomval4455
 
       - name: Dockerize
-        run: npx nx docker:build ${{ matrix.project }} --configuration=ci
+        run: npx nx run-many --target docker:build --projects=${{ matrix.project }}
         env:
           # https://www.npmjs.com/package/@nx-tools/nx-docker
           INPUT_TAGS: ${{ steps.meta.outputs.tags }}
