--- a/ee/packages/amplication-git-pull-service/project.json
+++ b/ee/packages/amplication-git-pull-service/project.json
@@ -115,10 +115,12 @@
     },
     "docker:build": {
       "executor": "@nx-tools/nx-docker:build",
+      "dependsOn": ["build"],
       "options": {
         "push": false,
         "metadata": {
-          "images": ["amplication-git-pull-service"]
+          "images": ["amplication-git-pull-service"],
+          "labels": []
         }
       }
     }
