--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -127,6 +127,8 @@ jobs:
         run: npx nx run-many --target docker:build --projects=${{ matrix.project }}
         env:
           # https://www.npmjs.com/package/@nx-tools/nx-docker
+          # INPUT_IMAGES: "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
+          # INPUT_TAGS: ${{ steps.meta.outputs.tags }}
           INPUT_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # - name: Build
       #   run: npx nx run-many --target build --projects=${{ matrix.project }}
