--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -115,11 +115,11 @@ jobs:
         with:
           images: "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
           tags: |
+            type=sha,prefix=sha-
             type=ref,event=branch
-            # type=ref,event=pr
-            # type=ref,event=tag
+            type=ref,event=pr
+            type=ref,event=tag
             # type=sha
-            # randomval4455
           labels: |
             org.opencontainers.image.source=
 
