--- a/package.json
+++ b/package.json
@@ -149,12 +149,14 @@
     "@typescript-eslint/parser": "^5.39.0",
     "apollo-server-testing": "^2.25.3",
     "babel-jest": "^27.1.4",
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-lerna": "^2.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "fast-glob": "^3.2.12",
+    "generate-package-json-webpack-plugin": "^2.6.0",
     "google-libphonenumber": "^3.2.31",
     "graphql": "^15.8.0",
     "jest": "^27.1.4",
