--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -113,7 +113,7 @@ jobs:
         uses: docker/metadata-action@v4
         id: meta
         with:
-          images: "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}"
+          images: "407256539111.dkr.ecr.us-east-1.amazonaws.com/${{ matrix.project }}-nx-test"
           tags: |
             type=sha,prefix=sha-
             type=ref,event=branch
