--- a/packages/amplication-client/package.json
+++ b/packages/amplication-client/package.json
@@ -62,7 +62,7 @@
     "check-format": "prettier --check \"**/*.{js,ts,json,gql,md,yaml}\"",
     "format": "prettier --write \"**/*.{js,ts,json,gql,md,yaml}\""
   },
-  "proxy": "http://localhost:3000",
+  "proxy": "https://3000-azanul-amplication-uvajcw4iqv9.ws-us71.gitpod.io",
   "eslintConfig": {
     "extends": "react-app",
     "rules": {
