--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,4 +77,12 @@
   "[terraform]": {
     "editor.defaultFormatter": "hashicorp.terraform"
   }
+  "editor.tabSize": 2,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "files.insertFinalNewline": true,
+  "files.trimFinalNewlines": true,
+  "css.validate": false,
+  "editor.wordWrap": "wordWrapColumn",
+  "editor.wordWrapColumn": 120
 }
