fix bug changing SERVER_PORT variable to PORT
undo package-lock.json changes

undo x

--- a/packages/amplication-data-service-generator/src/server/docker-compose/docker-compose.template.yml
+++ b/packages/amplication-data-service-generator/src/server/docker-compose/docker-compose.template.yml
@@ -6,7 +6,7 @@ services:
       args:
         NPM_LOG_LEVEL: notice
     ports:
-      - "${SERVER_PORT}:3000"
+      - "${PORT}:3000"
     environment:
       BCRYPT_SALT: "${BCRYPT_SALT}"
       JWT_SECRET_KEY: "${JWT_SECRET_KEY}"
