--- a/packages/amplication-data-service-generator/src/create-dotenv.template.env
+++ b/packages/amplication-data-service-generator/src/create-dotenv.template.env
@@ -2,7 +2,7 @@
 POSTGRESQL_USER=${dbUser}
 POSTGRESQL_PASSWORD=${dbPassword}
 POSTGRESQL_PORT=${dbPort}
-SERVER_PORT=3000
+PORT=3000
 BCRYPT_SALT=10
 JWT_SECRET_KEY=Change_ME!!!
 JWT_EXPIRATION=2d
