fix(data-service-generator): add slash in dockerfl
Add slash in Docker file

--- a/packages/amplication-data-service-generator/src/server/static/Dockerfile
+++ b/packages/amplication-data-service-generator/src/server/static/Dockerfile
@@ -24,7 +24,7 @@ COPY --from=base /app/dist ./dist
 COPY --from=base /app/prisma ./prisma
 COPY --from=base /app/scripts ./scripts
 COPY --from=base /app/src ./src
-COPY --from=base /app/tsconfig* .
+COPY --from=base /app/tsconfig* ./
 
 EXPOSE 3000
 
