created build manager, move related logic to the service

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -54,7 +54,7 @@ services:
   kafka-init-topics:
     image: confluentinc/cp-kafka:5.3.1
     volumes:
-      - ./message.json:/data/message.json
+      - /opt/kafka-init-topics/message.json:/data/message.json
     depends_on:
       - kafka
     command: "bash -c 'echo Waiting for Kafka to be ready... && \
