--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -38,7 +38,7 @@ spec:
                           - name: BUILD_ID
                             value: null # provided in parameters
                           - name: STATUS_UPDATE_URL
-                            value: http://amplication-server.next.svc.cluster.local/generated-apps/complete-code-generation-step
+                            value: https://b6e3-77-252-192-146.eu.ngrok.io/generated-apps/complete-code-generation-step
                         volumeMounts:
                           - name: persistent-storage
                             mountPath: /efs
