--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -33,9 +33,13 @@ BUILD_INPUT_FILE_NAME=input.json
 CONTAINER_BUILDER_DEFAULT=docker
 
 # Kafka Topics
-GENERATE_PULL_REQUEST_TOPIC="git.internal.pull-request.request.1"
-CREATE_PULL_REQUEST_COMPLETED_TOPIC="git.internal.pull-request.completed.1"
-CODE_GENERATION_SUCCESS_TOPIC="build.internal.code-generation.success.1"
+CREATE_PR_REQUEST_TOPIC="internal.create-pr.request.0"
+CREATE_PR_SUCCESS_TOPIC="internal.create-pr.success.0"
+CREATE_PR_FAILURE_TOPIC="internal.create-pr.failure.0"
+CODE_GENERATION_REQUEST_TOPIC="internal.code-generation.request.0"
+CODE_GENERATION_SUCCESS_TOPIC="internal.code-generation.success.0"
+CODE_GENERATION_FAILURE_TOPIC="internal.code-generation.failure.0"
+
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
 
 COMPOSE_PROJECT_NAME=amplication-server
