--- a/packages/amplication-cli/package.json
+++ b/packages/amplication-cli/package.json
@@ -57,6 +57,7 @@
     "graphql": "15.5.0",
     "pascal-case": "3.1.2",
     "pluralize": "8.0.0",
+    "prettier": "^2.7.1",
     "tslib": "1.14.1",
     "url-join": "4.0.1"
   },
