--- a/packages/amplication-code-gen-types/package.json
+++ b/packages/amplication-code-gen-types/package.json
@@ -26,7 +26,7 @@
     "json-schema-to-typescript": "10.1.5",
     "normalize-path": "3.0.0",
     "npm-run-all": "4.1.5",
-    "prettier": "2.1.1",
+    "prettier": "^2.7.1",
     "rimraf": "3.0.2",
     "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
