--- a/packages/amplication-data-service-generator/package.json
+++ b/packages/amplication-data-service-generator/package.json
@@ -34,7 +34,7 @@
     "param-case": "3.0.4",
     "pascal-case": "3.1.2",
     "pluralize": "8.0.0",
-    "prettier": "2.1.2",
+    "prettier": "^2.7.1",
     "prisma-schema-dsl": "1.1.5",
     "recast": "0.20.5",
     "replace-ext": "2.0.0",
