--- a/packages/amplication-git-service/package.json
+++ b/packages/amplication-git-service/package.json
@@ -50,7 +50,7 @@
     "eslint-plugin-import": "2.23.4",
     "jest": "^27.2.5",
     "jest-mock-extended": "2.0.4",
-    "prettier": "1.19.1",
+    "prettier": "^2.7.1",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
