--- a/packages/amplication-kafka/package.json
+++ b/packages/amplication-kafka/package.json
@@ -41,6 +41,7 @@
     "@nestjs/core": "8.4.4",
     "@nestjs/microservices": "8.4.3",
     "dotenv": "16.0.0",
+    "prettier": "^2.7.1",
     "reflect-metadata": "0.1.13"
   }
 }
