--- a/packages/amplication-scheduler/package.json
+++ b/packages/amplication-scheduler/package.json
@@ -18,6 +18,7 @@
     "cron": "1.8.2",
     "cronstrue": "1.125.0",
     "node-fetch": "2.6.7",
+    "prettier": "^2.7.1",
     "rc": "1.2.8",
     "typescript": "4.1.2"
   },
