--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -30,19 +30,23 @@ spec:
                         value: dsg
                     restartPolicy: Never
                     containers:
-                      - name: hello-container
-                        args:
-                          - "hello-world"
-                        command:
-                          - cowsay
-                        image: "docker/whalesay:latest"
+                      - name: dsg-container
+                        image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator:0.0.11"
+                        command: ["sh", "-c"]
+                        args: [ "cd /app/packages/amplication-data-service-generator; npm run generate-code -- /efs/input.json /efs/output" ]
                         env:
                           - name: BUILD_ID
                             value: null # provided in parameters
+                          - name: STATUS_UPDATE_URL
+                            value: http://amplication-build-manager.next.svc.cluster.local/build-runner/complete-code-generation-step
+                        volumeMounts:
+                          - name: persistent-storage
+                            mountPath: /efs
+                            subPathExpr: build-data/$(BUILD_ID)
                     volumes:
                       - name: persistent-storage
                         persistentVolumeClaim:
-                          claimName: efs-claim-{{ .Values.envName}}-dsg
+                          claimName: efs-claim-{{ .Values.envName }}-dsg
                 ttlSecondsAfterFinished: {{ .Values.job.ttlSecondsAfterFinished }}
                 backoffLimit: 0
           parameters:
@@ -50,11 +54,3 @@ spec:
                 dependencyName: test-dep
                 dataKey: body.buildId
               dest: spec.template.spec.containers.0.env.0.value
-            - src:
-                dependencyName: webhook
-                dataTemplate: "/efs/dsg-jobs/{{`{{ .Input.body.buildId }}`}}" # need to escape this due to helm chart
-              dest: spec.template.spec.containers.0.volumeMounts.0.mountPath
-            - src:
-                dependencyName: webhook
-                dataTemplate: "dsg-jobs/{{`{{ .Input.body.buildId }}`}}" # need to esacpe this due to helm chart
-              dest: spec.template.spec.containers.0.volumeMounts.0.subPath
