--- a/packages/amplication-build-manager/.env
+++ b/packages/amplication-build-manager/.env
@@ -7,9 +7,12 @@ KAFKA_GROUP_ID='build-manager'
 
 # Kafka Topics
 CREATE_PR_REQUEST_TOPIC="internal.create-pr.request.0"
+
 CODE_GENERATION_REQUEST_TOPIC="internal.code-generation.request.0"
 CODE_GENERATION_SUCCESS_TOPIC="internal.code-generation.success.0"
 CODE_GENERATION_FAILURE_TOPIC="internal.code-generation.failure.0"
+
+DSG_LOG_TOPIC="internal.dsg-log.0"
 
 DSG_RUNNER_URL="http://localhost:12000/example"
 
