--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -36,9 +36,12 @@ CONTAINER_BUILDER_DEFAULT=docker
 CREATE_PR_REQUEST_TOPIC="internal.create-pr.request.0"
 CREATE_PR_SUCCESS_TOPIC="internal.create-pr.success.0"
 CREATE_PR_FAILURE_TOPIC="internal.create-pr.failure.0"
+
 CODE_GENERATION_REQUEST_TOPIC="internal.code-generation.request.0"
 CODE_GENERATION_SUCCESS_TOPIC="internal.code-generation.success.0"
 CODE_GENERATION_FAILURE_TOPIC="internal.code-generation.failure.0"
+
+DSG_LOG_TOPIC="internal.dsg-log.0"
 
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
 
