--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -46,9 +46,12 @@ amplication-server:
       CREATE_PR_REQUEST_TOPIC: internal.create-pr.request.0
       CREATE_PR_SUCCESS_TOPIC: internal.create-pr.success.0
       CREATE_PR_FAILURE_TOPIC: internal.create-pr.failure.0
+
       CODE_GENERATION_REQUEST_TOPIC: internal.code-generation.request.0
       CODE_GENERATION_SUCCESS_TOPIC: internal.code-generation.success.0
       CODE_GENERATION_FAILURE_TOPIC: internal.code-generation.failure.0
+
+      DSG_LOG_TOPIC: internal.dsg-log.0
 
       #EFS
       BASE_BUILDS_FOLDER: /amplication-data/build-data
@@ -147,9 +150,12 @@ amplication-build-manager:
       KAFKA_GROUP_ID: build-manager
 
       CREATE_PR_REQUEST_TOPIC: internal.create-pr.request.0
+
       CODE_GENERATION_REQUEST_TOPIC: internal.code-generation.request.0
       CODE_GENERATION_SUCCESS_TOPIC: internal.code-generation.success.0
       CODE_GENERATION_FAILURE_TOPIC: internal.code-generation.failure.0
+
+      DSG_LOG_TOPIC: internal.dsg-log.0
 
       DSG_RUNNER_URL: http://webhook-eventsource-svc.next-dsg.svc.cluster.local:12000/example
 
