changed kafka broker from json format to comma separated value

--- a/ee/packages/amplication-git-pull-service/.env
+++ b/ee/packages/amplication-git-pull-service/.env
@@ -13,7 +13,7 @@ SERVICE_DB_NAME=amplication-git-pull-service
 COMPOSE_PROJECT_NAME=amplication-git-pull-service
 
 # kafka
-KAFKA_BROKERS=["localhost:9092"]
+KAFKA_BROKERS='localhost:9092'
 KAFKA_CONSUMER_GROUP=git-pull-event
 KAFKA_CLIENT_ID=repository-pull
 KAFKA_REPOSITORY_PUSH_QUEUE="git.external.push.event.0"
