--- a/ee/packages/amplication-git-push-webhook-service/.env
+++ b/ee/packages/amplication-git-push-webhook-service/.env
@@ -5,7 +5,7 @@ PORT = 4567
 WEBHOOKS_SECRET_KEY = [your webhooks secret key]
 
 # Kafka
-KAFKA_BROKERS="["localhost:9092"]"
+KAFKA_BROKERS='localhost:9092'
 KAFKA_REPOSITORY_PUSH_QUEUE ="git.external.push.event.0"
 
 # Postgres
