--- a/helm/charts/amplication/values-ariel.yaml
+++ b/helm/charts/amplication/values-ariel.yaml
@@ -25,7 +25,7 @@ amplication-server:
 
       #KAFKA
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
-      KAFKA_BROKERS: '["amplication-ariel-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: 'amplication-ariel-cp-kafka-headless:9092'
       KAFKA_CLIENT_ID: amplication-server
       KAFKA_GROUP_ID: amplication-server-group
 
@@ -65,7 +65,7 @@ amplication-git-push-webhook-service:
     hostname: webhook-ariel.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: '["amplication-ariel-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: 'amplication-ariel-cp-kafka-headless:9092'
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
       KAFKA_CLIENT_ID: git-push-webhook-service
       KAFKA_GROUP_ID: amplication-git-push-webhook-service
@@ -84,7 +84,7 @@ amplication-git-pull-service:
       GITHUB_APP_CLIENT_ID: 'Iv1.500372fe9efa340d'
       GIT_DEFAULT_ORIGIN_NAME: origin
 
-      KAFKA_BROKERS: '["amplication-ariel-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: 'amplication-ariel-cp-kafka-headless:9092'
       KAFKA_CLIENT_ID: git-pull-service
       KAFKA_GROUP_ID: git-pull-service-group
 
@@ -93,7 +93,7 @@ amplication-git-pull-service:
 amplication-git-pull-request-service:
   config:
     env:
-      KAFKA_BROKERS: '["amplication-ariel-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: 'amplication-ariel-cp-kafka-headless:9092'
       KAFKA_CLIENT_ID: git-pull-request-service
       KAFKA_GROUP_ID: git-pull-request-service-group
       GENERATE_PULL_REQUEST_TOPIC: git.internal.pull-request.request.0
@@ -105,6 +105,6 @@ amplication-storage-gateway:
     hostname: server-ariel.amplication-dev.com
   config:
     env:
-      KAFKA_BROKERS: '["amplication-ariel-cp-kafka-headless:9092"]'
+      KAFKA_BROKERS: 'amplication-ariel-cp-kafka-headless:9092'
       BASE_BUILDS_FOLDER: /amplication-data/build-data
       GITHUB_APP_APP_ID: '219560'
