--- a/packages/amplication-storage-gateway/.env
+++ b/packages/amplication-storage-gateway/.env
@@ -9,6 +9,6 @@ JWT_EXPIRATION=2d
 CHECK_USER_ACCESS_TOPIC="auth.user.access"
 
 # Kafka
-KAFKA_BROKERS="["localhost:9092"]"
+KAFKA_BROKERS='localhost:9092'
 KAFKA_CLIENT_ID='storage-queue-client'
 KAFKA_GROUP_ID='storage-server-group'
